demos(*): fix inputs spilling over when screen width small (#6155)
* demos(*): fix inputs spilling over when screen width small

* chore(*): fix line break

--- a/src/material-examples/autocomplete-simple/autocomplete-simple-example.css
+++ b/src/material-examples/autocomplete-simple/autocomplete-simple-example.css
@@ -1,5 +1,7 @@
 .example-form {
-  width: 500px;
+  min-width: 150px;
+  max-width: 500px;
+  width: 100%;
 }
 
 .example-full-width {
