--- a/src/material-examples/input-form/input-form-example.css
+++ b/src/material-examples/input-form/input-form-example.css
@@ -1,6 +1,7 @@
 .example-form {
-  width: 500px;
-  max-width: 100%;
+  min-width: 150px;
+  max-width: 500px;
+  width: 100%;
 }
 
 .example-full-width {
