--- a/src/material-examples/input-overview/input-overview-example.css
+++ b/src/material-examples/input-overview/input-overview-example.css
@@ -1,1 +1,9 @@
-/** No CSS for this example */
+.example-form {
+  min-width: 150px;
+  max-width: 500px;
+  width: 100%;
+}
+
+.example-full-width {
+  width: 100%;
+}
